--- a/javascript/tic-tac-toe.html
+++ b/javascript/tic-tac-toe.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tic Tac Toe</title>
-        <link rel="stylesheet" href="tick-tack-toe.css">
+        <link rel="stylesheet" href="tic-tac-toe.css">
         
     </head>
     <body>
@@ -23,6 +23,6 @@
             <button id="mainMenu">Main Menu</button>
             <button id="restartGame">Restart</button>
         </div>
-        <script src="tick-tack-toe.js" defer></script>
+        <script src="tic-tac-toe.js" defer></script>
     </body>
 </html>
